(library
 (public_name crypt)
 (libraries
  (select
   ffi.ml
   from
   (if_is_linux_or_freebsd -> ffi.posix.extended.ml)
   (if_macosx -> ffi.macosx.ml)
   (if_unix -> ffi.posix.ml)))
 (foreign_stubs
  (language c)
  (names crypt_stubs))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))

(library
 (name if_is_linux_or_freebsd)
 (modules)
 (package crypt)
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "freebsd"))))

(library
 (name if_macosx)
 (modules)
 (package crypt)
 (libraries threads)
 (enabled_if
  (= %{system} "macosx")))

(library
 (name if_unix)
 (modules)
 (libraries threads)
 (package crypt)
 (enabled_if
  (= %{os_type} "Unix")))
